--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 	height: 29cm;
 	border: 1px solid grey;
 }
-/*style colonne de gauche*/
+/*Début style colonne de gauche*/
 #element1
 {
 	background-color: #FFCA28;
-	min-width: 8cm;
+	column-width: 7cm;
 	text-align: justify;
 
 }
@@ -26,7 +26,8 @@
 {
 	text-align: center;
 }
-/*style colonne de droite*/
+/*Fin style colonne de gauche*/
+/*Début style colonne de droite*/
 
 h1 span
 {
@@ -39,7 +40,7 @@ h1 span
 #element2
 {
 	padding: 35px;
-	max-width: 13cm;
+	column-width: 11cm;
 }
 #element2 h2/*trait sous chaque Sections du CV*/
 {
@@ -47,11 +48,12 @@ h1 span
 
 }
 
-/*début code CSS pour section Formation*/
+	/*début code CSS pour section Formation*/
 
-#FORMATION1
+#FORMATION1/*de 2003 à 2007*/
 {
 	display: flex;
+	
 	width: 13cm;
 	margin: 20px;
 }
@@ -62,11 +64,12 @@ h1 span
 .class2
 {
 	flex: 2;
-	margin-left: 30px;
+	
 }
-#formation2
+#formation2/*de 2007 à 2009*/
 {
 	display: flex;
+	width: 13cm;
 	margin: 20px;
 }
 .class3
@@ -76,12 +79,14 @@ h1 span
 .class4
 {
 	flex: 2;
-	margin-left: 47px;
+	
 }
-#formation3
+#formation3/*2020*/
 {
 	display: flex;
 	margin: 20px;
+	width: 13cm;
+
 }
 .class5
 {
@@ -90,10 +95,10 @@ h1 span
 .class6
 {
 	flex: 2;
-	margin-left: 47px;
+	
 }
-/*fin code CSS pour section Formation*/
-/*Début codes CSS pour section Expérience*/
+	/*fin code CSS pour section Formation*/
+	/*Début codes CSS pour section Expérience*/
 #experience
 {
 	display: flex;
@@ -108,3 +113,5 @@ h1 span
 	flex: 2;
 	margin-left: 47px;
 }
+	/*Début codes CSS pour section Expérience*/
+/*Début style colonne de droite*/
