--- a/style.css
+++ b/style.css
@@ -1,69 +1,120 @@
 #contenu
 {
 	display: flex;
-	width: 21cm;
-	height: 29cm;
+	width: 1190px;
+	height: 1684px;
 	border: 1px solid grey;
+	font-size: 20px;
+	font-family: Arial, "times new roman", serif;
 }
 /*Début style colonne de gauche*/
+#tete
+{
+	width:220px;
+	height:220px;
+	border-radius: 50%;
+	margin: 82px 82px 41px 82px;
+}
+nav
+{
+	height: 390px;
+}
+ul
+{
+	list-style-type: none;
+	padding-top: 25px;
+}
 #element1
 {
-	background-color: #FFCA28;
-	column-width: 6cm;
+	background-color: #B39DDB;
+	column-width: 380px;
 	text-align: justify;
-
+	flex: 1;
+	overflow: auto;
 }
 #element1 h2
 {
-	background-color: #424242;
-	color:  #FFCA28;
+	background-color: #263238;
+	color:  #B39DDB;
+	text-align: center;
+	padding-top: 6px;
+	padding-bottom: 6px;
 }
 #element1 p
 {
 	padding: 35px;
 }
-#element1 h2
+.apropos
 {
-	text-align: center;
+	height: 700px;
 }
+.logo1
+{
+	height: 45px;
+	width: 45px;
+	padding: 12px;
+	margin: 1px 10px 1px 30px;
+	border: 2px solid black;
+	border-radius: 50%;
+}
+	
 /*Fin style colonne de gauche*/
 /*Début style colonne de droite*/
 
+header
+{
+	height: 250px;
+
+}
+h1
+{
+	font-size: 70px;
+	margin-top: 100px;
+	margin-bottom: 5px;
+	font-weight: normal;
+}
 h1 span
 {
-	color: #FFCA28;
+	color: #B39DDB;
+}
+h2
+{
+	padding-bottom: 20px;
 }
 #sousligner /*souslignage de dévelopeuse dans header*/
 {
-	text-decoration: underline #FFCA28;
+	text-decoration: underline #B39DDB;
 }
 #element2
 {
 	padding: 35px;
-	column-width: 12cm;
+	column-width: 800px;
+	flex: 2;
+	color: #263238;
+	overflow: auto;
 }
 #element2 h2/*trait sous chaque Sections du CV*/
 {
-	border-bottom: 2px solid #FFCA28;
-
+	border-bottom: 4px solid #B39DDB;
 }
 
 	/*début code CSS pour section Formation*/
 
-#formation_master
+#formation_master /*
+*/
 {
 	display: flex;
 	flex-direction: column-reverse;
 }
 
-#FORMATION1/*de 2003 à 2007*/
+#formation1/*de 2003 à 2007*/
 {
 	display: flex;
-	width: 13cm;
 	margin: 20px;
 }
 .class1
 {
+	font-weight: bold; 
 	flex: 1;
 }
 .class2
@@ -74,11 +125,11 @@ h1 span
 #formation2/*de 2007 à 2009*/
 {
 	display: flex;
-	width: 13cm;
 	margin: 20px;
 }
 .class3
 {
+	font-weight: bold;
 	flex: 1;
 }
 .class4
@@ -90,11 +141,12 @@ h1 span
 {
 	display: flex;
 	margin: 20px;
-	width: 13cm;
+	
 
 }
 .class5
 {
+	font-weight: bold;
 	flex: 1;
 }
 .class6
@@ -108,15 +160,43 @@ h1 span
 {
 	display: flex;
 	margin: 20px;
+	height: 250px;
 }
 .class7
 {
+	font-weight: bold;
 	flex: 1;
 }
 .class8
 {
 	flex: 2;
-	margin-left: 47px;
 }
+h3
+{
+	margin-top: 1px;
+}
+.logo2
+{
+	height:40px; 
+	width:40px;
+	margin-right: 30px;
+}
+.puce
+{
+	width:2px;
+	height: 2px;
+	background-color: red;
+}
+#element2 li
+{
+	list-style-type: circle;
+
+}
+.reco
+{
+	font-weight: bold;
+	max-height: 200px;
+}
+
 	/*Début codes CSS pour section Expérience*/
-/*Début style colonne de droite*/
+/*Fin style colonne de droite*/
