--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body
 
 }
 /*style colonne de gauche*/
-#tete
+img
 {
 	width:200px;
 	height:200px;
@@ -110,7 +110,15 @@ h2
 	display: flex;
 	flex-direction: column-reverse;
 }
-#formation
+#formation1
+{
+	display: flex;
+}
+#formation2
+{
+	display: flex;
+}
+#formation3
 {
 	display: flex;
 }
@@ -138,9 +146,44 @@ i
 	margin-right: 10px;
 }
 
-/* Responsive code css*/
+/* Responsive code css
+@media screen and (max-width: 1250px) and (min-width: 800px)
+{
+	#contenu
+	{
+		max-width: 595px;
+		max-height: 842px;
+		font-size: 10px;
+	}
+	h1
+	{
+		font-size: 35px;
+	}
+	header h3 
+	{
+		
+		font-size: 15px;
+	}
+	img 
+	{
+		width: 100px;
+		height: 100px;
+		margin-left: 20%;
+	}
+	#element1 i 
+	{
+		font-size: 20px;
+	}
+	#element2
+	{
+		padding: 5% 5% 10% 5%;
 
-@media screen and (max-width: 1250px)
+	}
+}
+*/
+
+/*Petit écran*/
+@media screen and (max-width: 1200px)
 {
 	#contenu
 	{
@@ -185,7 +228,7 @@ i
 		flex-direction: column;
 	}
 
-	#tete
+	img
 	{
 		height: 500px;
 		width: 500px;
@@ -201,3 +244,4 @@ i
 	{
 		font-size: 120px;
 		padding: 20px;
+	}
