--- a/style.css
+++ b/style.css
@@ -60,10 +60,11 @@ aside h2
 li
 {
 	list-style-type: none;
+	padding-top: 20px;
 }
 aside p
 {
-	padding: 0 30px 0 30px;
+	padding: 30px 30px 30px 30px;
 }
 aside i
 {
